--- a/composer.json
+++ b/composer.json
@@ -37,13 +37,13 @@
         "composer-plugin-api": "1.0.0"
     },
     "require-dev":{
-        "phpunit/phpunit":"*",
-        "phpunit/phpunit-mock-objects": "dev-master",
+        "phpunit/phpunit": "~4.5",
+        "phpunit/phpunit-mock-objects": "~2.3",
         "squizlabs/php_codesniffer": "1.4.7",
         "firegento/phpcs": "1.1.0",
-        "composer/composer":"*@dev",
-        "symfony/process":"*",
-        "mikey179/vfsStream":"*"
+        "composer/composer": "~1.0-alpha",
+        "symfony/process": "~2.3",
+        "mikey179/vfsStream": "~1.4"
     },
     "suggest":{
         "theseer/autoload": "~1.14",
