--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "type":"composer-plugin",
     "license":"OSL-3.0",
     "replace": {
-        "magento-hackathon/magento-composer-installer": "3.0.0"
+        "magento-hackathon/magento-composer-installer": "*"
     },
     "authors":[
         {
